Thu Apr 05 02:46:21 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/thread.t,perl/t/writabledatabase.t: Remove #! lines with -W
	  to fix "Name "Test::More::TODO" used only once: possible typo at
	  /usr/share/perl/5.14/Exporter/Heavy.pm line 190." warnings.

Wed Apr 04 14:06:47 GMT 2012  Olly Betts <olly@survex.com>

	* python/docs/examples/simpleexpand.py: Update to not use deprecated
	  MSet iteration features which have been removed on trunk.  This
	  also fixes a segfault if there are no matches and no documents
	  are explicitly marked as relevant.

Wed Mar 28 09:22:48 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-head.i: Update for new deprecation macros.

Fri Mar 23 00:42:11 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: More tests of geospatial API.

Thu Mar 22 23:49:50 GMT 2012  Olly Betts <olly@survex.com>

	* perl/util.i.in: Avoid importing isa from UNIVERSAL to fix Perl 5.12
	  deprecation warning.

Tue Mar 20 02:04:51 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: More tests of geospatial API.

Sun Mar 18 00:38:48 GMT 2012  Dan Colish <dcolish@gmail.com>

	* .gitignore: Ignore doxygen artifacts

Wed Mar 14 02:25:51 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.9 and ChangeLog for 1.3.0.

Tue Mar 13 22:41:01 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: Test constructing XapianLatLongCoord.

Tue Mar 13 00:32:37 GMT 2012  Olly Betts <olly@survex.com>

	* php/add-php-type-hints: Fix typo "XapianStemmer" -> "XapianStem".
	* php/smoketest.php: Add regression test coverage.

Thu Mar 08 05:51:38 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/: Enable warnings for all test cases and make them fatal.

Thu Mar 08 05:37:47 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/symbol-test.t: Remove lingering reference to @args which is
	  no longer set, and enable warnings and make them fatal so we don't
	  regress on this.

Fri Jan 27 01:21:18 GMT 2012  Olly Betts <olly@survex.com>
