@@ -23,14 +23,20 @@
 
 require("xapian")
 
-function expect(m, n)
+---
+-- m: expected value
+-- n: obtained value
+-- msg: failure message (a string)
+function expect(m, n, msg)
+  msg = msg and msg..': ' or ''
   if type(m) == "table" then
-    assert(#m == #n)
+    assert('table' == type(n), msg..'not a table')
+    assert(#m == #n, msg..'got: '..tostring(#n)..' want: '..tostring(#m))
     for i = 1, #m do
       expect(m[i], n[i])
     end
   else
-    assert(m == n)
+    assert(m == n, msg..'got: '..(tostring(n) or '???')..' want: '..(tostring(m) or '???'))
   end
 end
 
@@ -63,10 +69,10 @@ function run_tests()
 
   -- Test stem
   expect(tostring(stem), "Xapian::Stem(english)")
-  expect("is", stem("is"))
-  expect("go", stem("going"))
-  expect("want", stem("wanted"))
-  expect("refer", stem("reference"))
+  expect("is", stem("is"), 'stem noop "is" fails')
+  expect("go", stem("going"), 'stem noop "go" fails')
+  expect("want", stem("wanted"), 'stem(english) "wanted" -> "want" fails')
+  expect("refer", stem("reference"), 'stem(english) "reference" -> "refer" fails')
 
   -- Test document
   expect(doc:termlist_count(), 5)
@@ -76,7 +82,7 @@ function run_tests()
 
   -- Test database
   expect(tostring(db), "WritableDatabase()")
-  expect(db:get_doccount(), 1)
+  expect(db:get_doccount(), 1, 'db should have 1 document')
 
   term_count = 0
   for term in db:allterms() do
